[package]
name = "termutil"
version = "0.1.1"
authors = ["Lily Hopkins <bsalarius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "processenv", "wincon", "wincontypes"] }
